# FoundationStereo

./: environment.yml  foundation_stereo_utils.py  pyproject.toml  readme.md
docker/: dockerfile
foundation_stereo/: extractor.py  foundation_stereo.py  geometry.py  update.py
scripts/: make_onnx.py  run_demo.py  run_demo_batch.py  run_demo_tensorrt.py  run_demo_viser.py  vis_dataset.py
